# 2024_2025_av_sim_stack

./: .gitignore  LICENSE  README.md  fs_track.json
Visualizer/: .gitignore  README.md
Visualizer/ros2_ws/src/track_visualizer_pkg/: package.xml  setup.cfg  setup.py
Visualizer/ros2_ws/src/track_visualizer_pkg/meshes/: traffic_cone.stl
Visualizer/ros2_ws/src/track_visualizer_pkg/track_visualizer_pkg/: fs_track.csv  track_visualizer.py
perception/LIDAR/csv_version/src/csv_to_pointcloud_node/: CMakeLists.txt  CMakeLists_p.txt  package.xml
perception/LIDAR/csv_version/src/csv_to_pointcloud_node/launch/: full_pipeline.launch.py
perception/LIDAR/csv_version/src/csv_to_pointcloud_node/src/: cone_colour_detrection.cpp  cone_detection.cpp  cone_detection_test.cpp  crop_box.cpp  lidar.cpp  lidar_visualization.rviz  pointcloud_to_markers.cpp
perception/LIDAR/csv_version/src/csv_to_pointcloud_node/src/install/: local_setup.sh  setup.sh
perception/LIDAR/csv_version/src/csv_to_pointcloud_node/src/log/: latest_build
perception/LIDAR/csv_version/src/ouster_tools/: csv_origin.py  csv_trim.py  extract_csv_from_pcap.py  z_intensity_track.py
perception/LIDAR/pcap_version/: .gitignore
perception/LIDAR/pcap_version/src/lidar_integration/: CMakeLists copy.txt  CMakeLists.txt  package.xml
perception/LIDAR/pcap_version/src/lidar_integration/config/: ekf.yaml
perception/LIDAR/pcap_version/src/lidar_integration/include/lidar_integration/: json_loader.h
perception/LIDAR/pcap_version/src/lidar_integration/launch/: lidar_pipeline_launch copy 2.py  lidar_pipeline_launch copy.py  lidar_pipeline_launch.py
perception/LIDAR/pcap_version/src/lidar_integration/src/: cone_detection.cpp  crop_box.cpp  imu_reader.cpp  localization.cpp  pcap_check.cpp  reader.cpp  total_reader.cpp
perception/yolov8/: main.py  requirements.txt  webcam_main.py
simulation/: simulate.py  vehicle_test.py
simulation/pathing/: PurePursuit.py
simulation/physics/src/: bicycle_model_simple  bicycle_model_simple.cpp  bicycle_model_simple.py  cone.h  track.cpp
simulation/physics/src/bicycle_model_simple.dSYM/Contents/: Info.plist
simulation/physics/src/bicycle_model_simple.dSYM/Contents/Resources/DWARF/: bicycle_model_simple
simulation/physics/src/bicycle_model_simple.dSYM/Contents/Resources/Relocations/x86_64/: bicycle_model_simple.yml
simulation/sensors/: CameraSensor.py
simulation/sim_model/: simulate.py  vehicle.py
simulation/slam/: Slam.py
simulation/src/: PythonRobotics-master.code-workspace  bicycle_model_simple copy.py  bicycle_model_simple.cpp  camera.py  car_model.stl  cone.cpp  cone.py  control.py  dyanmic_model_testing.ipynb  fastslam.py  fastslam2.py  fs_track.csv  fs_track2.csv  fs_track3.csv  full_sub.py  gpu.py  lidar.py  my_simulation_config.rviz  old_scripts.ipynb  path_generator.py  path_testing.ipynb  run_sim.py  run_sim_p.py  run_sim_p.py.lprof  state.py  track.h  track.py  vehicle.py  visualiser.py  wheel_encoder.py  world.cpp  world.py
simulation/track_generator/: README.md  exporter.py  fs_track copy.csv  fs_track.csv  fs_track.json  fs_track_copy.csv  main.py  main_generate_track.py  track.py  track_generator.py  visualizer.py
simulation/track_generator/_depracated/: fs_track.json  track_generator.py
simulation/track_generator/saved_track_files/: fs_track copy.json  fs_track.json  fs_track_curvy.json  fs_track_default.json
sphinx/: README.md
sphinx/docs/: conf.py  index.rst  quick_start_guide.rst  sphinx_doc_guide.rst
sphinx/docs/_build/doctrees/: contact.doctree  environment.pickle  index.doctree  quick_start_guide.doctree  sphinx_doc_guide.doctree
sphinx/docs/_build/doctrees/controls/: index.doctree
sphinx/docs/_build/doctrees/pathing/: index.doctree
sphinx/docs/_build/doctrees/perception/: index.doctree  perc_image.doctree  perc_lidar.doctree
sphinx/docs/_build/doctrees/slam/: index.doctree
sphinx/docs/_build/html/: contact.html  genindex.html  index.html  objects.inv  quick_start_guide.html  search.html  searchindex.js  sphinx_doc_guide.html
sphinx/docs/_build/html/_sources/: contact.rst.txt  index.rst.txt  quick_start_guide.rst.txt
sphinx/docs/_build/html/_sources/controls/: index.rst.txt
sphinx/docs/_build/html/_sources/pathing/: index.rst.txt
sphinx/docs/_build/html/controls/: index.html
sphinx/docs/_build/html/pathing/: index.html
sphinx/docs/_build/html/perception/: index.html  perc_image.html  perc_lidar.html
sphinx/docs/_build/html/slam/: index.html
sphinx/docs/slam/: index.rst
sphinx/docs/source/: conf.py  contact.rst  dev_setup.rst  index.rst  literature_resources.rst  pipeline_overview.rst  pipeline_tutorial.rst  quick_start_guide.rst  sphinx_doc_guide.rst
sphinx/docs/source/_static/: custom.css
sphinx/docs/source/controls/: index.rst
sphinx/docs/source/pathing/: index.rst
sphinx/docs/source/perception/: index.rst  perc_image.rst  perc_lidar.rst
sphinx/docs/source/slam/: index.rst
sphinx/docs/source/tutorials/: index.rst  tut_controls.rst  tut_pathgen.rst  tut_perception.rst  tut_perception2.rst  tut_vehicle_modeling.rst  tut_vehicle_modeling2.rst  tut_world_track_cones.rst
website/: app.css  app.js  index.html
website/js/: main.js
