<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
             schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>csv_to_pointcloud_node</name>
  <version>0.0.1</version>
  <description>
    Convert CSV‐stored LiDAR data into PointCloud2, cluster cones,
    and export positions &amp; reflectivity statistics.
  </description>

  <maintainer email="jaewonl@example.com">Jaewon Lee</maintainer>
  <license>Apache-2.0</license>

  <!-- build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- runtime dependencies -->
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>ament_index_cpp</depend>

  <!-- if using ros2_ouster or other message packages -->
  <depend>ros2_ouster</depend>

  <!-- testing -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
